refactor userController, userService, userRepository and a little bit more